fix friends cropped images
closes #109

--- a/src/sass/global.scss
+++ b/src/sass/global.scss
@@ -156,10 +156,6 @@ canvas {
     font-size: 1.25rem !important;
   }
 
-  svg {
-    max-width: 7rem;
-  }
-
   #home {
     .button-container {
       margin-top: 30px;
